# src/modules/cars/entities/Specification.ts
@@ -1,0 +1,26 @@
+import { v4 as uuidv4 } from 'uuid';
+import { Entity, PrimaryColumn, Column, CreateDateColumn } from 'typeorm';
+
+@Entity("specifications")
+class Specification {
+
+  @PrimaryColumn()
+  id: string;
+
+  @Column()
+  name: string;
+
+  @Column()
+  description: string;
+
+  @CreateDateColumn()
+  created_at: Date;
+
+  constructor (){
+    if (!this.id){
+      this.id = uuidv4();
+    }
+  }
+}
+
+export { Specification }
