# src/modules/cars/models/Specification.ts
@@ -1,16 +1,0 @@
-import { v4 as uuidv4 } from 'uuid';
-
-class Specification {
-  id?: string;
-  name: string;
-  description: string;
-  createdAt: Date;
-
-  constructor (){
-    if (!this.id){
-      this.id = uuidv4();
-    }
-  }
-}
-
-export { Specification }
