# src/modules/cars/useCases/listSpecification/ListSpecificationController.ts
@@ -1,15 +1,13 @@
 import { Request, Response } from "express";
+import { container } from "tsyringe";
+
 import { ListSpecificationUseCase } from "./ListSpecificationUseCase";
 
 class ListSpecificationController {
-
-  constructor( private listSpecificationUseCase: ListSpecificationUseCase){
-
-  }
   
-  handle(request: Request, response: Response) {    
-        
-    const specifications = this.listSpecificationUseCase.execute();
+  async handle(request: Request, response: Response): Promise<Response> {    
+    const listSpecificationUseCase = container.resolve(ListSpecificationUseCase);
+    const specifications = await listSpecificationUseCase.execute();
     
     return response.json(specifications);  
   }
