# src/routes/categories.routes.ts
@@ -1,9 +1,9 @@
 import { Router } from 'express';
 import multer from 'multer';
 
-import { createCategoryController } from "../modules/cars/useCases/createCategory/";
-import { listCategoryController } from '../modules/cars/useCases/listCategory/';
-import { importCategoryController } from '../modules/cars/useCases/importCategory/';
+import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController";
+import { ListCategoryController } from '../modules/cars/useCases/listCategory/ListCategoryController';
+import { ImportCategoryController } from '../modules/cars/useCases/importCategory/ImportCategoryController';
 
 const categoriesRoutes = Router();
 
@@ -11,18 +11,14 @@ const upload = multer({
   dest: "./tmp"
 });
 
+const createCategoryController = new CreateCategoryController();
+const listCategoryController = new ListCategoryController();
+const importCategoryController = new ImportCategoryController();
 
+categoriesRoutes.post("/", createCategoryController.handle);
 
-categoriesRoutes.post("/", (request, response) => {
-  return createCategoryController.handle(request,response);
-});
+categoriesRoutes.get("/", listCategoryController.handle);
 
-categoriesRoutes.get("/", (request, response) =>{
-  return listCategoryController.handle(request,response);
-});
-
-categoriesRoutes.post("/import", upload.single("file"),  (request, response)  => {  
-  return importCategoryController.handle(request,response);
-});
+categoriesRoutes.post("/import", upload.single("file"),importCategoryController.handle);
 
 export { categoriesRoutes };
