# src/swagger.json
@@ -39,7 +39,7 @@
           "201":{
             "description": "Created"
           },
-          "500":{
+          "400":{
             "description": "Category already exists"
           }
         }
@@ -54,18 +54,7 @@
             "content":{
               "application/json":{
                 "schema":{
-                  "type":"array",
-                  "items":{
-                    "type":"object",
-                    "properties":{
-                      "name": {
-                        "type": "string"
-                      },
-                      "description": {
-                        "type": "string"
-                      }
-                    }
-                  }
+                  "$ref": "#/definitions/Specifications"
                 }
               }
             }
@@ -73,6 +62,33 @@
         }
       }
       
+    },
+    "/categories/import":{
+      "post":{
+        "tags":["Category"],
+        "summary":"Import categories from a file",
+        "description":"Import categories from a file",
+        "requestBody":{
+          "content":{
+            "multipart/form-data":{
+              "schema":{
+                "type": "object",
+                "properties":{
+                  "file":{
+                    "type":"string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses":{
+          "201":{
+            "description": "Created"
+          }
+        }
+      }
     },
     "/specifications":{     
       "post":{
@@ -104,9 +120,22 @@
           "201":{
             "description": "Created"
           },
-          "500":{
+          "400":{
             "description": "Specification already exists"
           }
+        }
+      }
+    }
+  },
+  "definitions":{
+    "Specification":{
+      "type": "object",
+      "properties" : {
+        "name": {
+          "type": "string"
+         },
+        "description": {
+          "type": "string"
         }
       }
     }
